--- a/app/views/furimas/index.html.erb
+++ b/app/views/furimas/index.html.erb
@@ -128,7 +128,7 @@
     </div>
     <ul class='item-lists'>
 
-    
+
     <% @furimas.each do |furima| %>
       <li class='list'>
         <%= link_to "#" do %>
@@ -136,7 +136,7 @@
           <%= image_tag furima.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
+          <%#<div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
           <%# //商品が売れていればsold outを表示しましょう %>
