--- a/app/views/furimas/show.html.erb
+++ b/app/views/furimas/show.html.erb
@@ -4,7 +4,7 @@
 <div class="item-show">
   <div class="item-box">
     <h2 class="name">
-      <%= "商品名" %>
+      <%= @furima.product %>
     </h2>
     <div class="item-img-content">
       <%= image_tag @furima.image ,class:"item-box-img" %>
@@ -16,28 +16,28 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-       <%=  @furima.price %>
+       <%= "¥#{@furima.price}" %>
       </span>
       <span class="item-postage">
-        <%= "配送料負担" %>
+        <%= @furima.delivery_charge.name %>
       </span>
     </div>
 
     <% if user_signed_in? %>
 
-    <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
-    <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+      <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
+      <p class="or-text">or</p>
+      <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
 
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
+      <% unless current_user.id == @furima.user_id %>
+      <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+      <% end %>
 
 
     <% end %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @furima.content %></span>
     </div>
     <table class="detail-table">
       <tbody>
